# physicsnemo-curator

./: .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  SECURITY.md  TUTORIAL.md  pyproject.toml
.github/workflows/: blossom-ci.yml  blossomi-ci.yml
examples/ansys_rst_to_zarr/: generate_sample_data.py  rst_data_source.py  rst_to_zarr.ipynb  rst_to_zarr_transformation.py  run_etl.py  zarr_data_source.py
examples/config/: domino_etl.yaml  external_aero_etl_ahmedml.yaml  external_aero_etl_drivaerml.yaml  external_aero_etl_drivaerml_filtering.yaml
examples/external_aerodynamics/: External_Aero_Data_Processing_Reference.md  README.md  constants.py  data_sources.py  data_transformations.py  dataset_validator.py  external_aero_geometry_data_processors.py  external_aero_surface_data_processors.py  external_aero_utils.py  external_aero_validation_utils.py  external_aero_volume_data_processors.py  paths.py  run_etl.py  schemas.py
physicsnemo_curator/: __init__.py  run_etl.py
physicsnemo_curator/config/: domino_etl.yaml  domino_etl_ahmedml.yaml
physicsnemo_curator/etl/: __init__.py  data_processors.py  data_sources.py  data_transformations.py  dataset_validators.py  etl_orchestrator.py  processing_config.py
physicsnemo_curator/utils/: utils.py
tests/: conftest.py  test_run_etl.py
tests/ci_tests/: config.json  copyright.txt  header_check.py
tests/test_etl/: test_data_processors.py  test_data_sources.py  test_data_transformations.py  test_dataset_validators.py  test_processing_config.py
(+77 files in other folders)
